proyeto mongo completo

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "DEBUG=app nodemon server/server.js"
+    "start": "set DEBUG=* & nodemon server/server.js"
   },
   "keywords": [],
   "author": "",
